--- a/app/views/artisans/_artisan.html.erb
+++ b/app/views/artisans/_artisan.html.erb
@@ -8,6 +8,12 @@
     <strong>Last name:</strong>
     <%= artisan.last_name %>
   </p>
+   <ul>
+    <strong>Skills </strong>
+    <% artisan.skills.each do |skill| %>
+    <li><%= skill.name%></li>
+    <%end%>
+  </ul>
 
   <p>
     <strong>Tjm:</strong>
