--- a/app/views/artisans/_artisan.html.erb
+++ b/app/views/artisans/_artisan.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id artisan %>">
+<div class="container "id="<%= dom_id artisan %>">
   <p>
     <strong>First name:</strong>
     <%= artisan.first_name %>
