--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id mission %>">
+<div class="container " id="<%= dom_id mission %>">
   <p>
     <strong>Start at:</strong>
     <%= mission.start_at %>
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Price:</strong>
-    <%= mission.price %>
+    <%= mission.default_price %>
   </p>
 
   <p>
