--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id skill %>">
+<div class="container" id="<%= dom_id skill %>">
   <p>
     <strong>Name:</strong>
     <%= skill.name %>
